--- a/Proyecto_Comisaria/src/vistas/PoliciasMantenimiento.form
+++ b/Proyecto_Comisaria/src/vistas/PoliciasMantenimiento.form
@@ -108,9 +108,9 @@
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="BotonAplicarCambios" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="36" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -179,6 +179,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Cambiar Foto"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotonFotoActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="BotonAplicarCambios">
       <Properties>
